feat: introduce event booking order services and align naming in order management
- Added `EventBookingOrderService` and its implementation for handling event-specific booking orders post-payment.
- Introduced new entities like `TicketSeriesCounterEntity` and repositories for ticket management.
- Refactored order-related naming conventions for consistency (e.g., renamed `OrderService` to `ProductOrderService`, `OrderEntity` to `ProductOrderEntity`).
- Updated all relevant classes, references, and methods to match the new naming structure.
- Enhanced support for events domain with dedicated booking orchestration and ticket counter handling.